fixing alignment of skills container and its items for mobile phones

--- a/style/about.css
+++ b/style/about.css
@@ -126,7 +126,8 @@ body {
 }
 @media screen and (max-width: 480px) {
     .skills_container {
-        margin-top: 110px;
+        margin-top: 130px;
+        align-items: center;
     }
 }
 @media screen and (min-width: 481px) {
